intTests/test_parse_errors/parser004.saw
// "rebindable" is not allowed in let-expressions
let rebindable d = 3 in return ();
